<resources>
    <string name="app_name">Unit Converter</string>
    <string name="app_icon_desc">Icon of the Application</string>
    <string name="app_version">Version 1.0</string>
    <string name="app_description">A simple and intuitive unit converter that allows users to convert various length units seamlessly.</string>

    <string name="developer_info">Developed by: Mohamed Yusoof Simjee\nSchool: KMD Institute\nYear: 2024</string>


    <string name="conversion_heading">Conversion Tool</string>

    <string name="title_conversion">Conversion</string>
    <string name="title_formula">Formula</string>
    <string name="title_about">About</string>

    <string name="menu_change_font_size">Change Font Size</string>
    <string name="menu_exit">Exit App</string>



    <string name="hint_enter_value">Enter value to convert</string>
    <string name="hint_converted_value">Converted value will appear here</string>

    <string name="button_copy">Copy Result</string>


    <string name="toast_light_mode">Switched to Light Mode</string>
    <string name="toast_dark_mode">Switched to Dark Mode</string>

    <string name="toast_copied">Converted value copied to clipboard!</string>
    <string name="toast_copy_failed">Failed to copy to clipboard.</string>

    <string name="toast_font_size_failed_to_changed">Failed to copy to clipboard.</string>

    <string name="toast_conversion_error">Failed to convert due to technical error!.</string>

    <string name="menu_switch_to_light_mode">Disable Dark Mode</string>
    <string name="menu_switch_to_dark_mode">Enable Dark Mode</string>


    <string-array name="font_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string name="dialog_title_select_font_size">Select Font Size</string>
    <string name="toast_font_size_change">Font size changed to %1$s</string>


    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="default_from_field_value">1</string>


    <string-array name="unit_array">
        <item>Metre</item>
        <item>Millimetre</item>
        <item>Mile</item>
        <item>Foot</item>
    </string-array>


    <string name="confirm_exit_title">Exit App</string>
    <string name="confirm_exit_message">Are you sure you want to exit the app?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>

    <string name="toast_error_showing_dialog">An error occurred while showing the dialog.</string>

</resources>