<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/conversionFragment">

    <fragment
        android:id="@+id/conversionFragment"
        android:name="com.logbook.unitconverter.ui.conversion.ConversionFragment"
        android:label="@string/title_conversion"
        tools:layout="@layout/fragment_conversion" />

    <fragment
        android:id="@+id/formulaFragment"
        android:name="com.logbook.unitconverter.ui.formula.FormulaFragment"
        android:label="@string/title_formula"
        tools:layout="@layout/fragment_formula" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.logbook.unitconverter.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>