<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fromConstraintLayout"
        android:maxWidth="488dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fromValueField"
            android:maxWidth="488dp"
            android:layout_width="0dp"
            android:minHeight="48dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:text="@string/default_from_field_value"
            android:hint="@string/hint_enter_value"
            android:inputType="numberDecimal"

            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fromUnitSpinner"
            app:layout_constraintWidth_percent="0.6" />

        <Spinner
            android:id="@+id/fromUnitSpinner"
            android:layout_width="0dp"
            android:minHeight="48dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fromValueField"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toConstraintLayout"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fromConstraintLayout"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/toValueField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/hint_converted_value"
            android:inputType="none"
            android:maxWidth="488dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/toUnitSpinner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.6" />

        <Spinner
            android:id="@+id/toUnitSpinner"
            android:layout_width="0dp"
            android:minHeight="49dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toValueField"
            app:layout_constraintWidth_percent="0.4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/copyButton"
            android:minWidth="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:text="@string/button_copy"
        app:layout_constraintTop_toBottomOf="@id/toConstraintLayout"
        app:layout_constraintBottom_toTopOf="@+id/conversionResultsRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/conversionResultsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/copyButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
